openapi: api/spec returning embedded yaml spec
